--- a/KuranX.App/Core/ResourceXaml/defaultDesign.xaml
+++ b/KuranX.App/Core/ResourceXaml/defaultDesign.xaml
@@ -28,16 +28,16 @@
         <Setter Property="VerticalAlignment" Value="Bottom" />
         <Setter Property="HorizontalAlignment" Value="Center" />
         <Setter Property="Margin" Value="0 0 0 10" />
-        <Setter Property="FontFamily" Value="Poppins Medium" />
-        <Setter Property="FontSize" Value="9" />
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
+        <Setter Property="FontSize" Value="12" />
         <Setter Property="Foreground" Value="{DynamicResource secondForegroundColor }" />
     </Style>
 
     <!-- TOP NAVIGATION BAR -->
 
     <Style TargetType="Border" x:Key="rightPanelBorder">
-        <Setter Property="Background" Value="#FAFAFA" />
-        <Setter Property="BorderBrush" Value="#E1E3E6" />
+        <Setter Property="Background" Value="{DynamicResource Base.Panel.Right}" />
+        <Setter Property="BorderBrush" Value="{DynamicResource Base.Panel.BorderBrush}" />
         <Setter Property="BorderThickness" Value="0" />
         <Setter Property="Margin" Value="0" />
         <Style.Triggers>
@@ -79,11 +79,11 @@
     <Style x:Key="defaultBorderShadowEffect" TargetType="Border">
         <Setter Property="SnapsToDevicePixels" Value="true" />
         <Setter Property="UseLayoutRounding" Value="True" />
-        <Setter Property="Background" Value="#FFFFFF" />
+        <Setter Property="Background" Value="{StaticResource Base.Background.Default}" />
         <Setter Property="CornerRadius" Value="5 5 5 5" />
         <Setter Property="Effect">
             <Setter.Value>
-                <DropShadowEffect BlurRadius="15" Opacity="0.15"  ShadowDepth="1" Direction="-25" Color="Black" />
+                <DropShadowEffect BlurRadius="15" Opacity="0.15"  ShadowDepth="1" Direction="-25" Color="{StaticResource Base.Shadow.Dark}" />
             </Setter.Value>
         </Setter>
     </Style>
@@ -737,5 +737,86 @@
         <Setter Property="TextWrapping" Value="Wrap" />
         <Setter Property="Foreground" Value="#383C41" />
         <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
+    </Style>
+
+    <Style x:Key="contactHeader" TargetType="Button">
+        <Setter Property="Background" Value="Transparent" />
+        <Setter Property="BorderThickness" Value="0" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Orientation="Vertical" Margin="5">
+                        <Icon:PackIconCodicons Kind="Feedback" Width="48" Height="48"  HorizontalAlignment="Center" Foreground="#1C1E2F" VerticalAlignment="Center" />
+                        <TextBlock Text="İLETİŞİM" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="#1C1E2F" FontSize="24" Margin="0 10 0 5" FontFamily="{DynamicResource PoppinsMedium}" />
+                    </StackPanel>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="TextBox" x:Key="contactDetail22">
+
+        <Setter Property="MinWidth" Value="150" />
+        <Setter Property="Width" Value="180" />
+        <Setter Property="MinHeight" Value="25" />
+        <Setter Property="Foreground" Value="#7B7B7B" />
+        <Setter Property="FontSize" Value="10" />
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
+        <Setter Property="Background" Value="{x:Null}" />
+        <Setter Property="BorderBrush" Value="#ACACAC" />
+        <Setter Property="Margin" Value="0 5 0 0" />
+        <Setter Property="Padding" Value="10 10 10 10" />
+        <Setter Property="TextWrapping" Value="Wrap" />
+        <Setter Property="AcceptsReturn" Value="True" />
+        <Setter Property="TextAlignment" Value="Justify" />
+        <Setter Property="VerticalScrollBarVisibility" Value="Visible" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                        <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsFocused" Value="true">
+                            <Setter Property="BorderBrush" TargetName="border" Value="#80F0433A" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="contactDetail" TargetType="TextBox">
+
+        <Setter Property="MinWidth" Value="150" />
+        <Setter Property="MinHeight" Value="30" />
+        <Setter Property="Height" Value="140" />
+        <Setter Property="Foreground" Value="#1C1E2F" />
+        <Setter Property="TextAlignment" Value="Justify" />
+        <Setter Property="FontSize" Value="12" />
+        <Setter Property="Padding" Value="5" />
+        <Setter Property="TextWrapping" Value="Wrap" />
+        <Setter Property="FontFamily" Value="{DynamicResource PoppinsMedium}" />
+        <Setter Property="Background" Value="#fff" />
+        <Setter Property="BorderBrush" Value="#ADB5BD" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TextBox}">
+                    <Border CornerRadius="5" x:Name="border" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" Background="{TemplateBinding Background}" SnapsToDevicePixels="True">
+                        <ScrollViewer x:Name="PART_ContentHost" Focusable="false" HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Hidden" />
+                    </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsFocused" Value="true">
+                            <Setter Property="BorderBrush" TargetName="border" Value="#80F0433A" />
+                        </Trigger>
+                        <Trigger Property="IsReadOnly" Value="True">
+                            <Setter Property="Background" Value="#f3f2f7" TargetName="PART_ContentHost" />
+                            <Setter Property="BorderThickness" Value="0" />
+                            <Setter Property="TextAlignment" Value="Center" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
     </Style>
 </ResourceDictionary>
